# Crypto-Chatbot

./: .env  README.md  app.py  pyproject.toml  rag_data.py
crypto_data/: bitcoin_price_history.csv  cardano_price_history.csv  dogecoin_price_history.csv  ripple_price_history.csv
data/: ethereum_price_history.csv  solana_price_history.csv
src/crypto_chatbot/: __init__.py
